--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/styles.css">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -104,13 +104,29 @@
                 <div class="table-header">
                     <div class="table-name-wrap">
                         <h3 class="customers-title">All Customers</h3>
-                        <p class="active-text">Active Members</p>
+                        <button class="active-text" onclick="toggleMembers()">Active Members</button>
                     </div>
                     <input type="text" class="search">
                 </div>
-
+                <div class="table">
+                    <table id="customers">
+                        <thead>
+                      <tr>
+                        <th>Customer Name</th>
+                        <th>Company</th>
+                        <th>Phone Number</th>
+                        <th>Email</th>
+                        <th>Country</th>
+                        <th>Status</th>
+                      </tr></thead>
+                      <tbody></tbody>
+                    </table>
+                </div>
             </div>
         </main>
     </div>
+
+    <script src="./js/data.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
