--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <h3 class="customers-title">All Customers</h3>
                         <button class="active-text" onclick="toggleMembers()">Active Members</button>
                     </div>
-                    <input type="text" class="search">
+                    <input type="text" class="search" oninput="searchByName()">
                 </div>
                 <div class="table">
                     <table id="customers">
